# pic-create

./: .gitignore  README.md  go.mod  main.py  mise.toml  pyproject.toml
cmd/pc/: main.go
internal/cli/: args.go  args_test.go  cli.go  cli_test.go  help.go
internal/images/: client.go  client_test.go
internal/oauth/: client.go  client_test.go
scripts/: smoke-test.sh
src/pic_create/: __init__.py  cli.py
