[project]
name = "pic-create"
version = "0.1.0"
description = "A small OpenAI image generation CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.0.0",
]

[project.scripts]
pc = "pic_create.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pic_create"]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[dependency-groups]
dev = [
    "pyrefly>=1.0.0",
    "ruff>=0.15.14",
]
